# opus

./: CMakeLists.txt  CRITICAL_BUGS_ANALYSIS.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  METRICS.json  NANOSECOND_HFT_PLAN.md  PRODUCTION_CLEANUP.md  README.md  build_nanosecond_hft.sh  validate_performance.sh
Exchange Matching Engine /Common Files/: latency_tracker.cpp  latency_tracker.h  lf_queue.h  mem_pool.h  nanosecond_timer.h  perf_utils.h  performance_dashboard.cpp  performance_dashboard.h  socket_utils.h  tcp_server.cpp  tcp_server.h  thread_utils.h  types.h
Exchange Matching Engine /EXCHANGE/: exchange_main.cpp
Exchange Matching Engine /EXCHANGE/market_data/: market_update.h  snapshot_synthesizer.h
Exchange Matching Engine /EXCHANGE/matcher/: matching_engine.cpp  matching_engine.h  me_order.h  me_order_book.cpp  me_order_book.h
Exchange Matching Engine /EXCHANGE/order_server/: client_request.h  client_response.h  fifo_sequencer.h  order_server.h
trading/: trading_main.cpp
trading/market_data/: market_data_consumer.h
trading/order_gw/: order_gateway.h
trading/strategy/: feature_engine.h  liquidity_taker.h  market_maker.h  market_order.h  market_order_book.h  om_order.h  order_manager.h  position_keeper.h  risk_manager.h  trade_engine.cpp  trade_engine.h
